# PsyFace

./: .gitignore  .readthedocs.yaml  LICENSE.txt  README.md  changelog.md  environment.yaml  face_mesh_indicies.py  face_skin_video.py  facial_isolation_module.py  mkdocs.yml  processing_script.py  pyproject.toml
CSV_Output/: 02-02-01-01-01-01-01_RGB.csv  02-02-01-01-01-01-03_RGB.csv  02-02-01-01-01-01-04_RGB.csv  02-02-01-01-01-01-06_RGB.csv  02-02-01-01-01-01-07_RGB.csv  02-02-01-01-01-01-08_RGB.csv  02-02-01-01-01-01-11_RGB.csv  02-02-01-01-01-01-13_RGB.csv  02-02-01-01-01-01-14_RGB.csv  02-02-01-01-01-01-17_RGB.csv  02-02-01-01-01-01-19_RGB.csv  02-02-01-01-01-01-22_RGB.csv  02-02-01-01-01-01-23_RGB.csv  02-02-01-01-01-02-02_RGB.csv  02-02-01-01-01-02-04_RGB.csv  02-02-01-01-01-02-05_RGB.csv  02-02-01-01-01-02-08_RGB.csv  02-02-01-01-01-02-09_RGB.csv  02-02-01-01-01-02-11_RGB.csv  02-02-01-01-01-02-19_RGB.csv  02-02-01-01-01-02-23_RGB.csv  02-02-01-01-02-01-01_RGB.csv  02-02-01-01-02-01-04_RGB.csv  02-02-01-01-02-01-05_RGB.csv  02-02-01-01-02-01-06_RGB.csv  02-02-01-01-02-01-10_RGB.csv  02-02-01-01-02-01-12_RGB.csv  02-02-01-01-02-01-14_RGB.csv  02-02-01-01-02-01-21_RGB.csv  02-02-01-01-02-01-22_RGB.csv  02-02-01-01-02-02-02_RGB.csv  02-02-01-01-02-02-03_RGB.csv  02-02-01-01-02-02-04_RGB.csv  02-02-01-01-02-02-05_RGB.csv  02-02-01-01-02-02-06_RGB.csv  02-02-01-01-02-02-07_RGB.csv  02-02-01-01-02-02-08_RGB.csv  02-02-01-01-02-02-12_RGB.csv  02-02-01-01-02-02-16_RGB.csv  02-02-01-01-02-02-19_RGB.csv  (+466 more)
OpenCV_References/: draw_images.py  essential_functions.py  (+3 more)
(+6213 files in other folders)
