[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "PsyFace"
version = "0.5.3"
requires-python = ">=3.9"
dependencies = [
    "opencv-python",
    "mediapipe",
    "pandas",
    "numpy == 2.0.0"
]

[tool.setuptools.packages.find]
where = ["source"]
include = ["psyface*"]
exclude = ["processing_script.py"]