[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "PyFAME"
version = "0.5.7"
authors = [
    { name="Gavin Bosman", email="gavin.bosman12@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "opencv-python",
    "mediapipe",
    "pandas",
    "numpy == 2.0.0",
    "scikit-image"
]

[project.urls]
Homepage = "https://github.com/Gavin-Bosman/PyFAME"

[tool.setuptools.packages.find]
where = ["source"]
include = ["pyfame*"]
exclude = ["processing_script.py"]